syntax = "proto3";

package api.system.v1;

import "api/system/v1/system.proto";
import "google/api/annotations.proto";

option go_package = "kratosx-fashion/api/system/v1;v1";
option java_multiple_files = true;
option java_package = "api.system.v1";

// 菜单服务
// @Auth
service Resource {
	rpc CreateMenu (MenuRequest) returns (IDReply){
		option (google.api.http) = {
			post: "/menu"
			body: "*"
		};
	}

	rpc UpdateMenu (MenuRequest) returns (IDReply){
		option (google.api.http) = {
			put: "/menu"
			body: "*"
		};
	}

	rpc DeleteMenu (IDsRequest) returns (EmptyReply){
		option (google.api.http) = {
			delete: "/menus/{ids}"
		};
	}

	rpc GetMenuTree (IDRequest) returns (MenuReply){
		option (google.api.http) = {
			get: "/menu/tree/{id}"
		};
	}

	rpc GetMenuTreeByRole (IDRequest) returns (MenuReply){
		option (google.api.http) = {
			get: "/menu/tree/role/{id}"
		};
	}

	rpc GetRouteTree(EmptyRequest) returns (RouterReply){
		option (google.api.http) = {
			get: "/router"
		};
	}
}